Bug 770135 - New PanelUI and toolbar customization - Milestone 1. r=mconley,jaws,Unfocused.
UltraBlame original commit: f7cb839f3bfc6f1a67d2e5f83b5591eaeae0b7be

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -5,20 +5,12 @@
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 @namespace html url("http://www.w3.org/1999/xhtml");
 
-#main-window:not([chromehidden~="toolbar"]) {
-%ifdef XP_MACOSX
-  min-width: 425px;
-%else
-  min-width: 390px;
-%endif
-}
-
 searchbar {
   -moz-binding: url("chrome://browser/content/search/search.xml#searchbar");
 }
 
-.browserStack > browser[remote="true"] {
-  -moz-binding: url("chrome://global/content/bindings/remote-browser.xml#remote-browser");
+#nav-bar {
+  -moz-binding: url("chrome://browser/content/toolbar.xml#toolbar");
 }
 
 tabbrowser {
@@ -259,7 +251,7 @@ panel[noactions] > richlistbox > richlistitem[type~="action"] > .ac-url-box > .a
 
 #wrapper-urlbar-container > #urlbar-container > #urlbar {
   -moz-user-input: disabled;
-  cursor: grab;
+  cursor: -moz-grab;
 }
 
 #PopupAutoComplete {
@@ -317,8 +309,9 @@ toolbarbutton.bookmark-item {
 }
 
 %ifdef MENUBAR_CAN_AUTOHIDE
-#toolbar-menubar:not([autohide="true"]) ~ toolbar > #bookmarks-menu-button,
-#toolbar-menubar:not([autohide="true"]) > #bookmarks-menu-button {
+#toolbar-menubar:not([autohide="true"]) ~ #nav-bar > #bookmarks-menu-button-container,
+#toolbar-menubar:not([autohide="true"]) ~ toolbar > #personal-bookmarks > #bookmarks-menu-button,
+#toolbar-menubar:not([autohide="true"]) > #personal-bookmarks > #bookmarks-menu-button {
   display: none;
 }
 %endif
@@ -394,11 +387,6 @@ window[chromehidden~="toolbar"] toolbar:not(.toolbar-primary):not(.chromeclass-m
 }
 
 
-#identity-popup-content-box:not(.chromeUI) > #identity-popup-brandName,
-#identity-popup-content-box:not(.chromeUI) > #identity-popup-chromeLabel,
-#identity-popup-content-box.chromeUI > .identity-popup-label:not(#identity-popup-brandName):not(#identity-popup-chromeLabel),
-#identity-popup-content-box.chromeUI > .identity-popup-description,
-#identity-popup.chromeUI > #identity-popup-button-container,
 #identity-popup-content-box.unknownIdentity > #identity-popup-connectedToLabel ,
 #identity-popup-content-box.unknownIdentity > #identity-popup-runByLabel ,
 #identity-popup-content-box.unknownIdentity > #identity-popup-content-host ,
@@ -421,7 +409,6 @@ window[chromehidden~="toolbar"] toolbar:not(.toolbar-primary):not(.chromeclass-m
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 2147483647 !important;
 }
 
 #full-screen-warning-container[fade-warning-out] {
@@ -519,8 +506,8 @@ window[chromehidden~="toolbar"] toolbar:not(.toolbar-primary):not(.chromeclass-m
   -moz-binding: url("chrome://browser/content/urlbarBindings.xml#click-to-play-plugins-notification");
 }
 
-.plugin-popupnotification-centeritem {
-  -moz-binding: url("chrome://browser/content/urlbarBindings.xml#plugin-popupnotification-center-item");
+popupnotification-centeritem {
+  -moz-binding: url("chrome://browser/content/urlbarBindings.xml#center-item");
 }
 
 
@@ -544,6 +531,7 @@ statuspanel {
   -moz-binding: url("chrome://browser/content/tabbrowser.xml#statuspanel");
   position: fixed;
   margin-top: -3em;
+  left: 0;
   max-width: calc(100% - 5px);
   pointer-events: none;
 }
@@ -610,7 +598,8 @@ html|*#gcli-output-frame,
 }
 
 .gclitoolbar-input-node,
-.gclitoolbar-complete-node {
+.gclitoolbar-complete-node,
+.gclitoolbar-prompt {
   direction: ltr;
 }
 
@@ -655,14 +644,6 @@ toolbarbutton[type="badged"] {
   -moz-binding: url("chrome://browser/content/urlbarBindings.xml#toolbarbutton-badged");
 }
 
-toolbarbutton[type="socialmark"] {
-  -moz-binding: url("chrome://browser/content/socialmarks.xml#toolbarbutton-marks");
-}
-toolbarbutton[type="socialmark"] > .toolbarbutton-icon {
-  width: 16px;
-  height: 16px;
-}
-
 
 chatbox {
   -moz-binding: url("chrome://browser/content/socialchat.xml#chatbox");
@@ -680,160 +661,4 @@ chatbar {
   -moz-binding: url("chrome://browser/content/socialchat.xml#chatbar");
   height: 0;
   max-height: 0;
-}
-
-
-
-#downloads-button {
-  -moz-binding: url("chrome://browser/content/downloads/download.xml#download-toolbarbutton");
-}
-
-
-
-#downloads-button[indicator] > image.toolbarbutton-icon {
-  display: none;
-}
-
-toolbarpaletteitem[place="palette"] > #downloads-button[indicator] > image.toolbarbutton-icon {
-  display: -moz-box;
-}
-
-toolbarpaletteitem[place="palette"] > #downloads-button[indicator] > stack.toolbarbutton-icon {
-  display: none;
-}
-
-#downloads-button:-moz-any([progress], [counter], [paused]) #downloads-indicator-icon,
-#downloads-button:not(:-moz-any([progress], [counter], [paused]))
-                                                   #downloads-indicator-progress-area
-{
-  visibility: hidden;
-}
-
-
-
-toolbar[mode="text"] > #downloads-button {
-  display: -moz-box;
-  -moz-box-orient: vertical;
-  -moz-box-pack: center;
-}
-
-toolbar[mode="text"] > #downloads-button > .toolbarbutton-text {
-  -moz-box-ordinal-group: 1;
-}
-
-toolbar[mode="text"] > #downloads-button > .toolbarbutton-icon {
-  display: -moz-box;
-  -moz-box-ordinal-group: 2;
-  visibility: collapse;
-}
-
-
-chatbar:-moz-full-screen-ancestor,
-chatbox:-moz-full-screen-ancestor  {
-  border: none;
-  position: fixed !important;
-  top: 0 !important;
-  left: 0 !important;
-  right: 0 !important;
-  bottom: 0 !important;
-  width: 100% !important;
-  height: 100% !important;
-  margin: 0 !important;
-  min-width: 0 !important;
-  max-width: none !important;
-  min-height: 0 !important;
-  max-height: none !important;
-  -moz-box-sizing: border-box !important; 
-}
-
-
-chatbox:-moz-full-screen-ancestor > .chat-titlebar {
-  display: none;
-}
-
-
-*:-moz-full-screen-ancestor chatbar:not(:-moz-full-screen-ancestor) {
-  display: none;
-}
-
-
-*:-moz-full-screen-ancestor #social-sidebar-box:not(:-moz-full-screen-ancestor) {
-  display: none;
-}
-
-
-#ContentSelectDropdown {
-  max-height: 400px;
-}
-
-.contentSelectDropdown-optgroup {
-  font-weight: bold;
-  
-  color: menutext;
-}
-
-.contentSelectDropdown-ingroup {
-  -moz-margin-start: 2em;
-}
-
-
-
-@keyframes uitour-wobble {
-  from {
-    transform: rotate(0deg) translateX(2px) rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg) translateX(2px) rotate(-360deg);
-  }
-}
-
-@keyframes uitour-zoom {
-  from {
-    transform: scale(0.9);
-  }
-  50% {
-    transform: scale(1.1);
-  }
-  to {
-    transform: scale(0.9);
-  }
-}
-
-@keyframes uitour-color {
-  from {
-    border-color: #5B9CD9;
-  }
-  50% {
-    border-color: #FF0000;
-  }
-  to {
-    border-color: #5B9CD9;
-  }
-}
-
-html|div#UITourHighlight {
-  display: none;
-  position: absolute;
-  z-index: 10000000000;
-}
-
-html|div#UITourHighlight[active] {
-  animation-delay: 2s;
-  animation-fill-mode: forwards;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
-  display: block;
-}
-
-html|div#UITourHighlight[active="wobble"] {
-  animation-name: uitour-wobble;
-  animation-duration: 1s;
-}
-html|div#UITourHighlight[active="zoom"] {
-  animation-name: uitour-zoom;
-  animation-duration: 1s;
-}
-html|div#UITourHighlight[active="color"] {
-  animation-name: uitour-color;
-  animation-duration: 2s;
 }
