--- a/browser/themes/shared/tabs.inc.css
+++ b/browser/themes/shared/tabs.inc.css
@@ -21,12 +21,15 @@
 .tabbrowser-tab,
 .tabs-newtab-button {
   -moz-appearance: none;
-  -moz-box-align: stretch;
   background-color: transparent;
   border-radius: 0;
   border-width: 0;
   margin: 0;
   padding: 0;
+}
+
+.tabbrowser-tab {
+  -moz-box-align: stretch;
 }
 
 
