--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -9,6 +9,10 @@ searchbar {
   -moz-binding: url("chrome://browser/content/search/search.xml#searchbar");
 }
 
+browser[remote="true"] {
+  -moz-binding: url("chrome://global/content/bindings/remote-browser.xml#remote-browser");
+}
+
 #nav-bar {
   -moz-binding: url("chrome://browser/content/toolbar.xml#toolbar");
 }
