--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -2828,6 +2828,15 @@ toolbarbutton.chevron > .toolbarbutton-menu-dropmarker {
   }
 }
 
+#plugin-install-notification-icon {
+  list-style-image: url(chrome://browser/skin/pluginInstall-16.png);
+}
+@media (min-resolution: 2dppx) {
+  #plugin-install-notification-icon {
+    list-style-image: url(chrome://browser/skin/pluginInstall-16@2x.png);
+  }
+}
+
 #notification-popup-box[hidden] {
   
 
@@ -2938,6 +2947,15 @@ toolbarbutton.chevron > .toolbarbutton-menu-dropmarker {
 
 .popup-notification-icon[popupid="click-to-play-plugins"] {
   list-style-image: url(chrome://mozapps/skin/plugins/pluginBlocked-64.png);
+}
+
+.popup-notification-icon[popupid="plugins-not-found"] {
+  list-style-image: url(chrome://browser/skin/pluginInstall-64.png);
+}
+@media (min-resolution: 2dppx) {
+  .popup-notification-icon[popupid="plugins-not-found"] {
+    list-style-image: url(chrome://browser/skin/pluginInstall-64\@2x.png);
+  }
 }
 
 .addon-progress-description {
